Increased the drop-zone and added background shedding to indicate that a item was being moved inside of another item. Added CSs fix to hide child items from a collapsed tree on drag.

--- a/src/Umbraco.Web.UI.Client/src/less/tree.less
+++ b/src/Umbraco.Web.UI.Client/src/less/tree.less
@@ -86,11 +86,20 @@
     display:none;
 }
 
-.umb-tree.ui-dragging ul.collapsed{
-    display: block;
-    height: 5px;
-    margin-bottom: -5px;
-    overflow: hidden;
+.umb-tree.ui-dragging ul.collapsed {
+	display: block;
+	height: 15px;
+	margin-top: -10px;
+	margin-bottom: -5px;
+	overflow: hidden;
+}
+
+.umb-tree.ui-dragging ul.collapsed li {
+	display: none;
+}
+
+.umb-tree.ui-dragging li.ui-dragging-over {
+	background: lightblue;
 }
 
 .umb-tree a {
